Kubernetes/modernizer/modernizer-backend-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: modernizer-backend
  labels:
    app: modernizer-backend
spec:
  containers:
  - image: registry.tech4comp.dbis.rwth-aachen.de/rwthacis/modernizer:latest 
    command:
      - "./main"
    imagePullPolicy: Always
    name: modernizer-backend
  restartPolicy: Always
