Kubernetes/modernizer/modernizer-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: modernizer-backend-service
spec:
  selector:
    app: modernizer-backend
  ports:
    - name: gin-web
      protocol: TCP
      port: 443
      targetPort: 8080
  type: ClusterIP
