Kubernetes/modernizer/modernizer-service.yml
---

# nginx-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: modernizer-service
spec:
  selector:
    app: nginx
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 80  # Expose port 443
  type: ClusterIP
