Kubernetes/modernizer/modernizer-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: modernizer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2$3
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  tls:
    - hosts:
        - modernizer.milki-psy.dbis.rwth-aachen.de
      secretName: nginx-tls
  rules:
    - host: modernizer.milki-psy.dbis.rwth-aachen.de
      http:
        paths:
          - path: /()(ollama)(.*)
            pathType: Prefix
            backend:
              service:
                name: modernizer-backend-service
                port:
                  number: 443
          - path: /()(weaviate)(.*)
            pathType: Prefix
            backend:
              service:
                name: modernizer-backend-service
                port:
                  number: 443
          - path: /debug(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ollama-service
                port:
                  number: 11434
status:
  loadBalancer:
    ingress:
      - ip: 137.226.232.175
